Some more sections added and Cubbed all in Human Resource tab

--- a/resources/css/filament/admin/theme.css
+++ b/resources/css/filament/admin/theme.css
@@ -2,6 +2,7 @@
 
 @source '../../../../app/Filament/**/*';
 @source '../../../../resources/views/filament/**/*';
+@source '../../../../resources/views/livewire/**/*';
 @source '../../../../vendor/saade/filament-autograph/resources/views/**/*.blade.php';
 
 .fi-modal-window-has-sticky-header.fi-modal-window-has-footer {
@@ -10,4 +11,8 @@
 
 .fi-sc-unordered-list {
   @apply columns-1;
+}
+
+.fi-logo {
+  @apply py-2;
 }
