All Sections Completed

--- a/resources/css/filament/admin/theme.css
+++ b/resources/css/filament/admin/theme.css
@@ -16,3 +16,7 @@
 .fi-logo {
   @apply py-2;
 }
+
+.navigation-widget {
+  @apply cursor-pointer bg-transparent hover:bg-gray-100 hover:dark:bg-gray-900 transition-colors duration-75;
+}
