clinical group fixed

--- a/resources/css/filament/admin/theme.css
+++ b/resources/css/filament/admin/theme.css
@@ -20,3 +20,7 @@
 .navigation-widget {
   @apply cursor-pointer bg-transparent hover:bg-gray-100 hover:dark:bg-gray-900 transition-colors duration-75;
 }
+
+.fi-sidebar-nav-groups {
+  @apply gap-2;
+}
